<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    tools:context=".ui.main_screen.MainActivity">
    
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_profile"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_icon"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:riv_corner_radius="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_sign_out"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_sign_out"
        android:padding="@dimen/_6sdp"
        android:tint="@color/blue_light"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/chat"
        android:textStyle="bold"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/img_profile"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
        app:layout_constraintEnd_toStartOf="@id/img_sign_out"
        app:layout_constraintTop_toTopOf="@id/img_profile"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/containLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="@id/img_profile"
        app:layout_constraintTop_toBottomOf="@id/img_profile"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_no_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/connecting"
            android:textColor="@color/primary_text"
            android:paddingVertical="@dimen/_1sdp"
            android:background="@color/primary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_have_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/internet_access"
            android:visibility="gone"
            android:textColor="@color/black"
            android:paddingVertical="@dimen/_1sdp"
            android:background="@color/green" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:background="@drawable/bg_search"
            android:gravity="start"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"
            app:layout_constraintHorizontal_bias="0.0">


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/ic_search"
                app:tint="@color/blue_light" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/search"
                android:textColor="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/layout_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/containLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_recent_conversation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:padding="@dimen/_20sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            />
    </FrameLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>